--- a/contato.html
+++ b/contato.html
@@ -44,7 +44,7 @@
     </header>
 
     <div class="container">
-        <form class="contact-form" action="https://formsubmit.co/info@adrianasaty.com" method="POST">
+        <form class="contact-form" action="https://formsubmit.co/worldddilomacyleague@gmail.com" method="POST">
             <div>
                 <label for="email">E-mail</label>
                 <input type="email" name="email" required>
