--- a/inscrições.html
+++ b/inscrições.html
@@ -47,7 +47,15 @@
         <div class="card-content">
             <h3>Regras do Evento</h3>
             <p>Baixe o documento completo com todas as regras e orientações do evento.</p>
-            <a href="regras.pdf" download class="btn download-btn">Download</a>
+            <a href="materiais/Regimento da simulação.pdf" download class="btn download-btn">Download</a>
+        </div>
+    </section>
+
+    <section class="download-card">
+        <div class="card-content">
+            <h3>Material-2024</h3>
+            <p>Baixe o material completo com todas as informações do evento.</p>
+            <a href="materiais/" download class="btn download-btn">Download</a>
         </div>
     </section>
     
