--- a/sobre.html
+++ b/sobre.html
@@ -52,10 +52,10 @@
 
                 
                 <p>A organização desta simulação é conduzida por uma equipe de alunos do Sesi-437. Cada membro dedica-se a criar uma experiência realista para todos que participam cuidando de todos os detalhes. Estamos trabalhando duro para criar atividades recorrentes e interessantes para toda a rede Sesi local.</p>
-                <a href="contato.html" class="btn animate-btn">Algum botao provavelmente contato</a>
+                <a href="contato.html" class="btn animate-btn">Entre em Contato</a>
             </div>
             <div class="sobre-img">
-                <img src="img/" alt="alguma imagem">
+                <img src="img/Imagem_do_WhatsApp_de_2024-09-11_à_s__08.22.13_bfe4f554__1_-removebg-preview.png" alt="alguma imagem">
             </div>
         </div>
     </section>
