--- a/Index2.html
+++ b/Index2.html
@@ -49,7 +49,7 @@
                 <a class="btn animate-btn" href="sobre.html">Descubra Mais</a>
             </div>
             <div class="agenda-img">
-                <img src="" alt="alguma img">
+                <img src="/img/Imagem do WhatsApp de 2024-11-04 à(s) 13.36.07_59956f0b.jpg" alt="alguma img">
             </div>
         </div>
     </section>
@@ -79,7 +79,7 @@
                 <a class="btn animate-btn" href="inscrições.html">Saiba Mais</a>
             </div>
             <div class="agenda-img">
-                <img src="" alt="alguma img">
+                <img src="img/Imagem do WhatsApp de 2024-11-04 à(s) 13.36.15_c29e9413.jpg" alt="alguma img">
             </div>
         </div>
     </section>
