--- a/Index2.html
+++ b/Index2.html
@@ -89,34 +89,36 @@
 
 
     <section class="curiosidades">
-
-        <div class="container">
-
-
-            <div class="card">
-                <img src="img/creativity-svgrepo-com.svg" alt="img-icon">
-                <h1 class="titulo">Quem pode participar do simulado?</h1>
-                <p>
-                   Qualquer aluno pode se inscrever, desde que cumpra os requisitos de participação.
-                </p>
+        <div class="carousel-container">
+            <button class="carousel-btn prev" onclick="moveCarousel(-1)">❮</button>
+            <div class="carousel">
+                <div class="card">
+                    <img src="img/creativity-svgrepo-com.svg" alt="img-icon">
+                    <h1 class="titulo">Quem pode participar do simulado?</h1>
+                    <p>Qualquer aluno pode se inscrever, desde que cumpra os requisitos de participação.</p>
+                </div>
+                <div class="card">
+                    <img src="img/creativity-svgrepo-com.svg" alt="img-icon">
+                    <h1 class="titulo">É necessário ter experiência prévia?</h1>
+                    <p>Não, o simulado está aberto tanto para iniciantes quanto para veteranos. Todos os participantes receberão orientações sobre as regras e os procedimentos do debate.</p>
+                </div>
+                <div class="card">
+                    <img src="img/creativity-svgrepo-com.svg" alt="img-icon">
+                    <h1 class="titulo">Como faço para me inscrever?</h1>
+                    <p>Acesse a seção "Faça Parte" do site e preencha o formulário de inscrição. As vagas são limitadas, então é importante se inscrever o quanto antes!</p>
+                </div>
+                <div class="card">
+                    <img src="img/creativity-svgrepo-com.svg" alt="img-icon">
+                    <h1 class="titulo">Qual é o custo para participar?</h1>
+                    <p>A participação é gratuita para alunos do SESI. Para outros participantes, consulte as condições na página de inscrição.</p>
+                </div>
+                <div class="card">
+                    <img src="img/creativity-svgrepo-com.svg" alt="img-icon">
+                    <h1 class="titulo">O que ganho ao participar?</h1>
+                    <p>Além de experiência única, você recebe um certificado de participação e a chance de desenvolver habilidades valiosas para o futuro.</p>
+                </div>
             </div>
-
-            <div class="card">
-                <img src="img/creativity-svgrepo-com.svg" alt="img-icon">
-                <h1 class="titulo">É necessário ter experiência prévia?</h1>
-                <p>
-                    Não, o simulado está aberto tanto para iniciantes quanto para veteranos. Todos os participantes receberão orientações sobre as regras e os procedimentos do debate.
-                </p>
-            </div>
-
-            <div class="card">
-                <img src="img/creativity-svgrepo-com.svg" alt="img-icon">
-                <h1 class="titulo">Como faço para me inscrever?</h1>
-                <p>
-                    Acesse a seção "Faça Parte" do site e preencha o formulário de inscrição. As vagas são limitadas, então é importante se inscrever o quanto antes!
-                </p>
-            </div>
-
+            <button class="carousel-btn next" onclick="moveCarousel(1)">❯</button>
         </div>
     </section>
 
